--- a/angular/package.json
+++ b/angular/package.json
@@ -1,47 +1,70 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
+  "name": "spike-free-product",
+  "version": "1.0.0",
+  "private": true,
+  "description": "SPIKE free product page.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run build:ssr",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "e2e": "ng e2e",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:ssr": "node dist/server.js",
+    "build:client-and-server-bundles": "ng build --prod && ng run spike-free-product:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
-  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "@angular/animations": "~8.2.13",
-    "@angular/common": "~8.2.13",
-    "@angular/compiler": "~8.2.13",
-    "@angular/core": "~8.2.13",
-    "@angular/forms": "~8.2.13",
-    "@angular/platform-browser": "~8.2.13",
-    "@angular/platform-browser-dynamic": "~8.2.13",
-    "@angular/router": "~8.2.13",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@angular/upgrade": "^8.0.0",
+    "@auth0/angular-jwt": "^3.0.1",
+    "@nguniversal/express-engine": "^8.0.0-rc.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.0.0-rc.1",
+    "@packt/angular-sdk": "0.0.7",
+    "angular-in-memory-web-api": "^0.9.0",
+    "axios": "^0.19.0",
+    "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
-    "@angular/cli": "~8.3.17",
-    "@angular/compiler-cli": "~8.2.13",
-    "@angular/language-service": "~8.2.13",
+    "@angular-devkit/build-angular": "0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/platform-server": "^8.0.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "^2.0.4",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "lodash": "^4.16.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^4.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "typescript": "~3.4.3",
+    "webpack-cli": "^3.1.0"
+  },
+  "repository": {}
 }
