--- a/angular/package.json
+++ b/angular/package.json
@@ -37,8 +37,11 @@
     "@packt/angular-sdk": "0.0.7",
     "angular-in-memory-web-api": "^0.9.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "zone.js": "~0.9.1"
