--- a/angular/package.json
+++ b/angular/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "google-libphonenumber": "^3.2.6",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
