--- a/angular/package.json
+++ b/angular/package.json
@@ -38,6 +38,7 @@
     "angular-in-memory-web-api": "^0.9.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "contentful": "^7.13.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "google-libphonenumber": "^3.2.6",
